# cargo-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: claude_desktop_config.json
src/cargo_mcp/: __init__.py  server.py
test-project/: Cargo.toml  README.md
test-project/benches/: math_bench.rs
test-project/src/: lib.rs  main.rs
test-project/tests/: integration_test.rs
tests/: __init__.py  test_server.py
