[package]
name = "test-project"
version = "0.1.0"
edition = "2021"
authors = ["Test Author <test@example.com>"]
description = "A test Rust project for demonstrating cargo-mcp functionality"
license = "MIT"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "calculator"
path = "src/bin/calculator.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "math_bench"
harness = false

[features]
default = ["json-output"]
json-output = []
verbose = []
